yamls/routing/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-dav
  namespace: nextcloud
  labels:
    app: nextcloud
    tier: frontend
spec:
  replacePathRegex:
    regex: ^/.well-known/ca(l|rd)dav
    replacement: /remote.php/dav/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: nextcloud
  labels:
    app: nextcloud
    tier: frontend
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    stsSeconds: 31536000
    forceSTSHeader: true
    stsPreload: true
    stsIncludeSubdomains: true
    browserXssFilter: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-office
  namespace: nextcloud
  labels:
    app: nextcloud
    tier: onlyoffice-backend
spec:
  headers:
    accessControlMaxAge: 100
    referrerPolicy: "no-referrer"
    stsSeconds: 31536000
    forceSTSHeader: true
    stsPreload: true
    stsIncludeSubdomains: true
    browserXssFilter: true
