yamls/routing/services.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: nextcloud-fpm
    namespace: nextcloud
    labels:
      app: nextcloud
  spec:
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 80
    selector:
      app: nextcloud
      tier: frontend
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: nextcloud-fpm
    namespace: nextcloud
    labels:
      app: nextcloud
  spec:
    ports:
      - port: 9000
    selector:
      app: nextcloud
      tier: fpm-backend
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: nextcloud-mariadb
    namespace: nextcloud
    labels:
      app: nextcloud
  spec:
    ports:
      - port: 3306
    selector:
      app: nextcloud
      tier: mariadb-backend
    type: ClusterIP
    clusterIP: None
- apiVersion: v1
  kind: Service
  metadata:
    name: nextcloud-redis
    namespace: nextcloud
    labels:
      app: nextcloud
  spec:
    ports:
      - port: 6379
    selector:
      app: nextcloud
      tier: redis-backend
    type: ClusterIP
    clusterIP: None
- apiVersion: v1
  kind: Service
  metadata:
    name: nextcloud-onlyoffice
    namespace: nextcloud
    labels:
      app: nextcloud
      tier: onlyoffice-backend
  spec:
    ports:
      - port: 80
    selector:
      app: nextcloud
      tier: onlyoffice-backend
    type: ClusterIP
